# beehive

./: .gitignore  Caddyfile  Dockerfile  Makefile  README.md  Readme.md  demo.ipynb  docker-compose.yaml  entrypoint.sh  pyproject.toml  requirements.txt  run_streamlit.sh  setup.cfg  streamlit.py
beehive/: diffexp.py  setup.py  util.py
beehive/beehive/: __init__.py  auth.py  cli.py  config.py  exceptions.py  expset.py  login.html  util.py
beehive/beehive.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
beehive/vis/: data.py  util.py
bokeh/: index.html
bokeh/diffexp/: main.py
bokeh/gene_expression/: main.py
bokeh/gsea_view/: main.py
bokeh/hexbin_expression/: main.py
bokeh/jitter_expression/: main.py
bokeh/kernel_density_expression/: main.py
bokeh/mean_abundance/: main.py
bokeh/quadrant_plot/: main.py
bokeh/scatter_expression/: main.py
bokeh/volcano_plot/: main.py
cellhive/: __init__.py  api.py  cli.py  cli_db_help.py  cli_db_upload.py  cli_file.py  cli_query.py  db.py  md.py  metadata.py  metadata_tools.py  util.py
cellhive/attick/: h5ad.py  h5ad_util.py
cellhive/cli/: run.py
data/: .gitignore  README
data/h5ad/: h.colmg.2.yaml  h.how1m.1.yaml  h.how1m.2.yaml  h.man2m.1.int.yaml  h.man2m.1.raw.yaml  h.man2m.1.yaml  (+8 more)
docker/: Dockerfile  Dockerfile.mac  entrypoint.sh  nginx.conf
notebooks/: demo_hexbin_plot.ipynb  helper.ipynb  scatterplot.ipynb
shiny/: app.py
static/: pelicanconf.py
static_private/: pelicanconf.py
templates/: bds.js  download_gene_expression.js  download_general.js  download_hexbin_expression.js  download_scatter_expression.js  download_volcano_plot.js  frontpage.html.template  index.html  menu.html  styles.css
termite/: __init__.py  config.py  db.py  globals.py  h5ad.py  metadata.py  util.py
visualization/: blocks.py  main.py  views.py
(+121 files in other folders)
