[project]
name = "termite"
authors = [
        {name="Mark Fiers", email="mark@fie.rs"}]
version = "0.0.3"

dependencies = [
    #"altair",
    #"click",
    #"duckdb",
    "numpy",
    "pandas",
    #"plotly",
    "pymed",
    #"scanpy",
    #"streamlit",
    'importlib-metadata; python_version<"3.8"',
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylsp-mypy]
enabled = true
live_mode = true
strict = true