[project]
name = "cellhive"
authors = [
        {name="Mark Fiers", email="mark@fie.rs"}]
version = "0.0.4"

dependencies = [
    "numpy",
    "pandas",
    "pymed",
    'importlib-metadata; python_version<"3.8"',
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylsp-mypy]
enabled = true
live_mode = true
strict = true